# ticrs

./: Cargo.toml  README.md
.github/config/: release-changelog-builder-action.json
.github/workflows/: ci.yml  release.yml
src/: main.rs  utils.rs
src/cli/: app.rs  mod.rs
src/tictactoy/: board.rs  mod.rs  player.rs
tic-rs-client/: Cargo.toml
tic-rs-client/src/: main.rs  utils.rs
tic-rs-client/src/cli/: app.rs  mod.rs
ticrs-client/: Cargo.toml
ticrs-client/src/: main.rs  utils.rs
ticrs-client/src/cli/: app.rs  mod.rs
tictactoy/: Cargo.toml
tictactoy/src/: board.rs  lib.rs  player.rs
tictactoy/tests/: board_tests.rs  player_tests.rs
